Replit Generated Portfolio with resume and linkedIn
Replit Generated Portfolio with resume and linkedIn

--- a/FolioOne/about-old.html
+++ b/FolioOne/about-old.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - Rooshmica Ramesh</title>
-  <meta name="description" content="Learn about Rooshmica Ramesh - Full Stack .NET Developer with 5+ years experience in AI/ML integration, Azure cloud solutions, and enterprise applications. Based in Dublin, Ireland.">
-  <meta name="keywords" content="About, Full Stack Developer, .NET Core, AI/ML Engineer, Azure Expert, Dublin Ireland, Rooshmica Ramesh">
+  <title>- FolioOne Bootstrap Template</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -53,16 +53,33 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
+          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#">Dropdown 1</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="#">Deep Dropdown 1</a></li>
+                  <li><a href="#">Deep Dropdown 2</a></li>
+                  <li><a href="#">Deep Dropdown 3</a></li>
+                  <li><a href="#">Deep Dropdown 4</a></li>
+                  <li><a href="#">Deep Dropdown 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Dropdown 2</a></li>
+              <li><a href="#">Dropdown 3</a></li>
+              <li><a href="#">Dropdown 4</a></li>
+            </ul>
+          </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
       <div class="header-social-links">
-        <a href="https://twitter.com/rooshmica" target="_blank" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.linkedin.com/in/rooshmicaramesh/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/rooshmica" target="_blank" class="github"><i class="bi bi-github"></i></a>
-        <a href="mailto:roosh97@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
+        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -85,19 +102,19 @@
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Hello there</span>
-              <h2 class="headline">Hi, I'm Rooshmica Ramesh</h2>
+              <h2 class="headline">Hi, I'm Rooshmica K R</h2>
               <p class="lead">
-                Results-driven Full Stack .NET Developer with 5+ years of experience designing, developing, and optimizing scalable web applications. I specialize in .NET Core, Angular, SQL Server, Azure, Microservices, REST APIs, and CI/CD pipelines. Currently pursuing my Master's in Artificial Intelligence at Technological University of Shannon while bringing AI/ML innovations to enterprise applications.
+                Senior Software Developer with 6+ years of experience designing, building, and deploying custom solutions across diverse domains. Skilled in full-cycle software development, cloud integration, and AI-driven application optimization, I specialize in solving complex challenges with efficient, scalable, and innovative approaches. My expertise spans software architecture, modern cloud platforms, and intelligent systems, with a strong focus on leveraging AI to enhance performance and scalability. Collaborating closely with cross-functional teams, I deliver high-impact, reliable solutions that drive real business value.
               </p>
               <p>
-                My expertise spans cloud-native solutions with Azure Functions, Cosmos DB, AI integrations using OpenAI GPT-4, LangChain, and FAISS vector databases. I have a proven track record of enhancing system efficiency, reducing processing time, and modernizing legacy applications to improve performance and user engagement. Based in Dublin, Ireland, I'm passionate about leveraging cutting-edge technologies to solve complex business challenges.
+                .NET & Python Development | Azure & AWS Cloud Engineering | Generative AI & LLM Integration | Cloud-Native Architecture & Migration | DevOps & CI/CD (Docker, Kubernetes) | Legacy App Migration | Database Design & Optimization | API Development & System Integration
               </p>
 
               <div class="cta-group">
                 <a href="#portfolio" class="btn-ghost">
                   View My Work <i class="bi bi-arrow-up-right"></i>
                 </a>
-                <a href="assets/Rooshmica_Ramesh_Resume.pdf" target="_blank" class="link-underline">
+                <a href="#" class="link-underline">
                   Download Resume <i class="bi bi-download"></i>
                 </a>
               </div>
@@ -106,7 +123,7 @@
 
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/person/Roosh1.jpg" alt="Portrait of Rooshmica Ramesh" class="img-fluid profile-photo">
+              <img src="assets/img/person/Roosh1.jpg" alt="Portrait of Alex" class="img-fluid profile-photo">
             </figure> 
           </div>
         </div>
@@ -117,30 +134,30 @@
           <div class="row g-4">
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="120">
               <div class="skill-item">
-                <i class="bi bi-code-square"></i>
-                <h3>.NET Core</h3>
-                <p>Expert in .NET Core, MVC, Web API, EF, LINQ with 5+ years experience</p>
+                <i class="bi bi-layout-text-window"></i>
+                <h3>.Net</h3>
+                <p>Proficient in .Net web applications with 5Y Industry Experience</p>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="180">
               <div class="skill-item">
-                <i class="bi bi-cloud"></i>
-                <h3>Azure Cloud</h3>
-                <p>Azure Functions, Service Bus, Cosmos DB, SQL Database, and storage solutions</p>
+                <i class="bi bi-code-slash"></i>
+                <h3>Python</h3>
+                <p>Maecenas pharetra magna sit amet risus.</p>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="240">
               <div class="skill-item">
-                <i class="bi bi-robot"></i>
-                <h3>AI/ML</h3>
-                <p>OpenAI GPT-4, LangChain, FAISS, LlamaIndex, RAG applications, and embeddings</p>
+                <i class="bi bi-phone"></i>
+                <h3></h3>
+                <p>Donec id elit non mi porta gravida.</p>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="300">
               <div class="skill-item">
-                <i class="bi bi-layers"></i>
-                <h3>Frontend</h3>
-                <p>Angular, React, TypeScript, JavaScript, HTML5, CSS3, Bootstrap</p>
+                <i class="bi bi-camera"></i>
+                <h3>Photography</h3>
+                <p>Aliquam euismod nunc at augue cursus.</p>
               </div>
             </div>
           </div>
@@ -154,32 +171,32 @@
               <article class="timeline-item">
                 <span class="dot"></span>
                 <time>2018</time>
-                <h4>Computer Science Graduate</h4>
-                <p>Bachelor's degree from Anna University, Chennai, specializing in software engineering.</p>
+                <h4>B.A. in Design</h4>
+                <p>Quisque euismod turpis ut sapien luctus bibendum.</p>
               </article>
             </div>
             <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="180">
               <article class="timeline-item">
                 <span class="dot"></span>
-                <time>2018-2020</time>
-                <h4>Software Developer</h4>
-                <p>Started career at Maitri Technology Solutions, developing REST APIs and MVC services.</p>
+                <time>2020</time>
+                <h4>Freelance Start</h4>
+                <p>Mauris non arcu non urna convallis vulputate.</p>
               </article>
             </div>
             <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="240">
               <article class="timeline-item">
                 <span class="dot"></span>
-                <time>2020-2023</time>
-                <h4>Senior Programmer</h4>
-                <p>Medusind Solutions - Led microservices architecture and cloud migrations.</p>
+                <time>2022</time>
+                <h4>Joined Creative Studio</h4>
+                <p>Nunc sed nibh et libero fermentum posuere.</p>
               </article>
             </div>
             <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
               <article class="timeline-item">
                 <span class="dot"></span>
-                <time>2023-2024</time>
-                <h4>Senior Software Engineer</h4>
-                <p>Cognizant Solutions - AI/ML integrations and cloud-native solutions architect.</p>
+                <time>2024</time>
+                <h4>Lead Frontend</h4>
+                <p>Proin commodo massa sit amet urna pretium.</p>
               </article>
             </div>
           </div>
@@ -188,7 +205,7 @@
 
         <!-- Quote -->
         <blockquote class="personal-quote text-center mb-5" data-aos="fade-down" data-aos-delay="200">
-          <p>"Passionate about building scalable, AI-powered, and cloud-integrated applications that drive business transformation through technology."</p>
+          <p>"Building clean and meaningful experiences through thoughtful code and quiet design."</p>
         </blockquote>
         <!-- End Quote -->
 
@@ -196,26 +213,26 @@
         <div class="row g-3 justify-content-center">
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="120">
             <div class="fact-pill">
-              <i class="bi bi-trophy"></i>
-              <span>RUN-EU Finalist</span>
+              <i class="bi bi-magic"></i>
+              <span>Minimalism</span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="160">
             <div class="fact-pill">
-              <i class="bi bi-star"></i>
-              <span>Star Performer</span>
+              <i class="bi bi-headphones"></i>
+              <span>Lo-fi Beats</span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="200">
             <div class="fact-pill">
-              <i class="bi bi-rocket"></i>
-              <span>NASA Hackathon</span>
+              <i class="bi bi-geo-alt"></i>
+              <span>City Walks</span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="240">
             <div class="fact-pill">
-              <i class="bi bi-mortarboard"></i>
-              <span>AI Student</span>
+              <i class="bi bi-brush"></i>
+              <span>Sketching</span>
             </div>
           </div>
         </div>
@@ -230,13 +247,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Technical Skills</h2>
-        <p>Professional expertise in cutting-edge technologies, demonstrated through 5+ years of enterprise-level development experience and continuous learning in emerging AI/ML technologies.</p>
-        
-        <!-- Skill Icons -->
-        <div class="text-center mt-4">
-          <img src="https://skillicons.dev/icons?i=cs,dotnet,python,angular,react,typescript,js,html,css,bootstrap,azure,docker,postgresql,mongodb,git&perline=8" alt="Technical Skills" class="img-fluid" style="max-width: 100%; height: auto;">
-        </div>
+        <h2>Skills</h2>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
