--- a/FolioOne/contact-old.html
+++ b/FolioOne/contact-old.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact - Rooshmica Ramesh</title>
-  <meta name="description" content="Get in touch with Rooshmica Ramesh for software development opportunities, AI/ML projects, and collaboration. Based in Dublin, Ireland.">
-  <meta name="keywords" content="Contact, Hire Developer, Full Stack Developer, Dublin Ireland, Rooshmica Ramesh">
+  <title>Contact - FolioOne Bootstrap Template</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -53,6 +53,23 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
+          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#">Dropdown 1</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="#">Deep Dropdown 1</a></li>
+                  <li><a href="#">Deep Dropdown 2</a></li>
+                  <li><a href="#">Deep Dropdown 3</a></li>
+                  <li><a href="#">Deep Dropdown 4</a></li>
+                  <li><a href="#">Deep Dropdown 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Dropdown 2</a></li>
+              <li><a href="#">Dropdown 3</a></li>
+              <li><a href="#">Dropdown 4</a></li>
+            </ul>
+          </li>
           <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -76,7 +93,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Let's connect! I'm always interested in discussing new opportunities, innovative projects, and collaborative ventures in Full-Stack Development, AI/ML, and Cloud Solutions.</p>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -85,16 +102,16 @@
           <div class="col-lg-5">
             <div class="info-box" data-aos="fade-up" data-aos-delay="200">
               <h3>Contact Info</h3>
-              <p>Currently based in Dublin, Ireland, and open to remote opportunities across EU. Available for exciting projects and collaborations.</p>
+              <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis.</p>
 
               <div class="info-item" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box">
                   <i class="bi bi-geo-alt"></i>
                 </div>
                 <div class="content">
-                  <h4>Location</h4>
-                  <p>Dublin, County Dublin</p>
-                  <p>Ireland</p>
+                  <h4>Our Location</h4>
+                  <p>A108 Adam Street</p>
+                  <p>New York, NY 535022</p>
                 </div>
               </div>
 
@@ -104,8 +121,8 @@
                 </div>
                 <div class="content">
                   <h4>Phone Number</h4>
-                  <p>+353 894972422</p>
-                  <p>Available Mon-Fri</p>
+                  <p>+1 5589 55488 55</p>
+                  <p>+1 6678 254445 41</p>
                 </div>
               </div>
 
@@ -115,8 +132,8 @@
                 </div>
                 <div class="content">
                   <h4>Email Address</h4>
-                  <p>roosh97@gmail.com</p>
-                  <p>Professional inquiries welcome</p>
+                  <p>info@example.com</p>
+                  <p>contact@example.com</p>
                 </div>
               </div>
             </div>
@@ -125,9 +142,9 @@
           
             <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
               <h3>Get In Touch</h3>
-              <p>Interested in collaborating or have a project in mind? I'd love to hear from you. Let's discuss how we can work together to create innovative solutions.</p>
+              <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis.</p>
 
-              <form action="mailto:roosh97@gmail.com" method="post" enctype="text/plain" class="contact-form" data-aos="fade-up" data-aos-delay="200">
+              <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
                 <div class="row gy-4">
 
                   <div class="col-md-6">
@@ -172,13 +189,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Rooshmica Ramesh</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://twitter.com/rooshmica" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.linkedin.com/in/rooshmicaramesh/" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/rooshmica" target="_blank" rel="noopener"><i class="bi bi-github"></i></a>
-        <a href="mailto:roosh97@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href=""><i class="bi bi-twitter-x"></i></a>
+        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href=""><i class="bi bi-instagram"></i></a>
+        <a href=""><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
