--- a/FolioOne/portfolio-old.html
+++ b/FolioOne/portfolio-old.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio - Rooshmica Ramesh</title>
-  <meta name="description" content="Software development portfolio showcasing AI/ML projects, enterprise applications, and full-stack solutions using .NET Core, Angular, and Azure.">
-  <meta name="keywords" content="Portfolio, AI Projects, .NET Core, Angular, Azure, Full Stack Developer, Rooshmica Ramesh">
+  <title>Portfolio - FolioOne Bootstrap Template</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -53,16 +53,33 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html" class="active">Portfolio</a></li>
+          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#">Dropdown 1</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="#">Deep Dropdown 1</a></li>
+                  <li><a href="#">Deep Dropdown 2</a></li>
+                  <li><a href="#">Deep Dropdown 3</a></li>
+                  <li><a href="#">Deep Dropdown 4</a></li>
+                  <li><a href="#">Deep Dropdown 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Dropdown 2</a></li>
+              <li><a href="#">Dropdown 3</a></li>
+              <li><a href="#">Dropdown 4</a></li>
+            </ul>
+          </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
       <div class="header-social-links">
-        <a href="https://twitter.com/rooshmica" target="_blank" rel="noopener" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.linkedin.com/in/rooshmicaramesh/" target="_blank" rel="noopener" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/rooshmica" target="_blank" rel="noopener" class="github"><i class="bi bi-github"></i></a>
-        <a href="mailto:roosh97@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
+        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -76,7 +93,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Showcasing innovative software solutions, AI/ML applications, and enterprise-level projects that demonstrate expertise in full-stack development, cloud architecture, and artificial intelligence integration.</p>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -84,115 +101,107 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-web">Web Apps</li>
-            <li data-filter=".filter-ai">AI/ML</li>
-            <li data-filter=".filter-cloud">Cloud</li>
-            <li data-filter=".filter-enterprise">Enterprise</li>
+            <li data-filter=".filter-strategy">Strategy</li>
+            <li data-filter=".filter-finance">Finance</li>
+            <li data-filter=".filter-operations">Operations</li>
+            <li data-filter=".filter-technology">Technology</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ai">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-1.webp" alt="MoodMate AI Assistant" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-1.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-1.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>MoodMate – AI Mental Wellness Assistant</h4>
-                  <p>AI Chatbot for Mental Health</p>
+                  <h4>Business Growth Strategy</h4>
+                  <p>Strategic Planning</p>
                   <div class="portfolio-tags">
-                    <span>BERT</span>
-                    <span>RAG</span>
-                    <span>LLaMA-3</span>
-                    <span>FastAPI</span>
+                    <span>Strategy</span>
+                    <span>Consulting</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ai">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-2.webp" alt="Revela Fashion Assistant" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-2.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-2.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Revela – AI Fashion Assistant</h4>
-                  <p>RUN-EU Finalist Project</p>
+                  <h4>Financial Restructuring</h4>
+                  <p>Financial Advisory</p>
                   <div class="portfolio-tags">
-                    <span>RAG</span>
-                    <span>FAISS</span>
-                    <span>LLMs</span>
-                    <span>Gradio</span>
+                    <span>Finance</span>
+                    <span>Investment</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-enterprise">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-operations">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-3.webp" alt="Nestle RBS HR Solutions" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-3.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-3.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Nestle RBS HR Solutions</h4>
-                  <p>Enterprise Cloud Application</p>
+                  <h4>Supply Chain Optimization</h4>
+                  <p>Operations Management</p>
                   <div class="portfolio-tags">
-                    <span>.NET Core</span>
-                    <span>Azure</span>
-                    <span>Angular</span>
-                    <span>NGRX</span>
+                    <span>Operations</span>
+                    <span>Logistics</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cloud">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-4.webp" alt="Medclarity Healthcare" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-4.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-4.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Medclarity Healthcare Platform</h4>
-                  <p>Microservices Architecture</p>
+                  <h4>Digital Transformation</h4>
+                  <p>Technology Consulting</p>
                   <div class="portfolio-tags">
-                    <span>Microservices</span>
-                    <span>Azure SQL</span>
-                    <span>Python</span>
-                    <span>FastAPI</span>
+                    <span>Technology</span>
+                    <span>Innovation</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-5.webp" alt="VOIZR Social Network" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-5.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-5.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>VOIZR – AI-Powered Social Network</h4>
-                  <p>Social Platform for Articles</p>
+                  <h4>Market Expansion</h4>
+                  <p>Strategic Planning</p>
                   <div class="portfolio-tags">
-                    <span>AI-Powered</span>
+                    <span>Strategy</span>
                     <span>Growth</span>
                   </div>
                 </div>
@@ -236,13 +245,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Rooshmica Ramesh</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://twitter.com/rooshmica" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.linkedin.com/in/rooshmicaramesh/" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/rooshmica" target="_blank" rel="noopener"><i class="bi bi-github"></i></a>
-        <a href="mailto:roosh97@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href=""><i class="bi bi-twitter-x"></i></a>
+        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href=""><i class="bi bi-instagram"></i></a>
+        <a href=""><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
