--- a/FolioOne/resume-old.html
+++ b/FolioOne/resume-old.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Resume - Rooshmica Ramesh</title>
-  <meta name="description" content="Professional resume of Rooshmica Ramesh - Full Stack .NET Developer with 5+ years experience in AI/ML, Azure cloud solutions, and enterprise applications.">
-  <meta name="keywords" content="Resume, Full Stack Developer, .NET Core, AI/ML, Azure, Rooshmica Ramesh">
+  <title>Resume - FolioOne Bootstrap Template</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -53,16 +53,33 @@
           <li><a href="resume.html" class="active">Resume</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
+          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#">Dropdown 1</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="#">Deep Dropdown 1</a></li>
+                  <li><a href="#">Deep Dropdown 2</a></li>
+                  <li><a href="#">Deep Dropdown 3</a></li>
+                  <li><a href="#">Deep Dropdown 4</a></li>
+                  <li><a href="#">Deep Dropdown 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Dropdown 2</a></li>
+              <li><a href="#">Dropdown 3</a></li>
+              <li><a href="#">Dropdown 4</a></li>
+            </ul>
+          </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
       <div class="header-social-links">
-        <a href="https://twitter.com/rooshmica" target="_blank" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.linkedin.com/in/rooshmicaramesh/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/rooshmica" target="_blank" class="github"><i class="bi bi-github"></i></a>
-        <a href="mailto:roosh97@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
+        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -76,7 +93,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Results-driven Full Stack .NET Developer with 5+ years of experience in designing, developing, and optimizing scalable web applications. Expert in cloud solutions, AI/ML integrations, and modern software architecture.</p>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -90,17 +107,17 @@
 
               <div class="resume-content">
                 <article class="education-item">
-                  <h4>Master of Science in Artificial Intelligence</h4>
-                  <h5>Sept 2024 - Apr 2025</h5>
-                  <p class="institution"><em>Technological University of Shannon, Athlone, Ireland</em></p>
-                  <p>Currently pursuing advanced studies in AI/ML technologies, focusing on machine learning algorithms, deep learning, and intelligent systems development.</p>
+                  <h4>Master of Computer Science</h4>
+                  <h5>2019 - 2021</h5>
+                  <p class="institution"><em>Stanford University, California</em></p>
+                  <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
                 </article>
 
                 <article class="education-item">
-                  <h4>Bachelor of Computer Science Engineering</h4>
-                  <h5>Jun 2014 - Apr 2018</h5>
-                  <p class="institution"><em>Anna University, Chennai, India</em></p>
-                  <p>Comprehensive foundation in computer science principles, software engineering, algorithms, data structures, and system design.</p>
+                  <h4>Bachelor of Computer Science</h4>
+                  <h5>2015 - 2019</h5>
+                  <p class="institution"><em>Massachusetts Institute of Technology</em></p>
+                  <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis delectus nihil temporibus sapiente</p>
                 </article>
               </div>
             </div><!-- End Education Section -->
@@ -111,28 +128,28 @@
 
               <div class="resume-content">
                 <div class="skill-item">
-                  <h4>.NET Core & C#</h4>
+                  <h4>Frontend Development</h4>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
 
                 <div class="skill-item">
-                  <h4>Angular & React</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
-                <div class="skill-item">
-                  <h4>Azure Cloud</h4>
+                  <h4>Backend Development</h4>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
 
                 <div class="skill-item">
-                  <h4>AI/ML & Python</h4>
+                  <h4>UI/UX Design</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <h4>Project Management</h4>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
@@ -149,37 +166,37 @@
               <div class="resume-content">
                 <article class="experience-item">
                   <h4>Senior Software Engineer</h4>
-                  <h5>Dec 2023 - Sept 2024</h5>
-                  <p class="company"><em>Cognizant Solutions, Chennai, India</em></p>
+                  <h5>2021 - Present</h5>
+                  <p class="company"><em>Google, Mountain View, CA</em></p>
                   <ul>
-                    <li>Architected cloud-native solutions with .NET Core, Azure Functions, and Cosmos DB, enhancing scalability and fault tolerance by 40%</li>
-                    <li>Integrated AI services into enterprise applications using RAG, LangChain, OpenAI GPT-4, and FAISS vector DB within a .NET Core + Angular framework</li>
-                    <li>Designed modular, secure REST APIs in .NET Core for AI orchestration, seamlessly interfacing with Python FastAPI LLM microservices</li>
-                    <li>Led a team of three in data migration, legacy system decommissioning, and new application development, delivering projects on time</li>
+                    <li>Lead in the development, implementation, and optimization of web applications using modern technologies</li>
+                    <li>Delegate tasks to the 7 members of the development team and provide counsel on all aspects of the project</li>
+                    <li>Supervise the assessment of all web applications, mobile apps, and software platforms for quality and efficiency</li>
+                    <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
                   </ul>
                 </article>
 
                 <article class="experience-item">
-                  <h4>Senior Software Programmer</h4>
-                  <h5>Nov 2020 - Dec 2023</h5>
-                  <p class="company"><em>Medusind Solutions, Chennai, India</em></p>
+                  <h4>Software Engineer</h4>
+                  <h5>2019 - 2021</h5>
+                  <p class="company"><em>Microsoft, Redmond, WA</em></p>
                   <ul>
-                    <li>Converted legacy monolithic architecture to microservice-based architecture, enhancing system scalability and flexibility</li>
-                    <li>Built REST APIs using .NET Core and integrated with Angular front-end, boosting user engagement</li>
-                    <li>Created RAG application with Python, FastAPI, and LLAMA models for Insurance Companies</li>
-                    <li>Led migration of SQL Server database to Azure SQL, cutting infrastructure costs by 20% and increasing data processing speeds by 25%</li>
+                    <li>Developed numerous marketing programs (logos, brochures, infographics, presentations, and advertisements)</li>
+                    <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                    <li>Recommended and consulted with clients on the most appropriate software platforms</li>
+                    <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
                   </ul>
                 </article>
 
                 <article class="experience-item">
-                  <h4>Software Developer</h4>
-                  <h5>Nov 2018 - Apr 2020</h5>
-                  <p class="company"><em>Maitri Technology Solutions, Chennai, India</em></p>
+                  <h4>Junior Software Developer</h4>
+                  <h5>2017 - 2019</h5>
+                  <p class="company"><em>Apple Inc., Cupertino, CA</em></p>
                   <ul>
-                    <li>Developed REST APIs and MVC services in C# for Salesforce-OnBase integration</li>
-                    <li>Built dynamic frontends using Bootstrap and jQuery for responsive dashboards</li>
-                    <li>Automated and optimized Salesforce data flows, reducing API usage and improving cross-platform data accuracy by 40%</li>
-                    <li>Gathered requirements and provided technical support to meet client expectations</li>
+                    <li>Implemented responsive websites and web applications using modern JavaScript frameworks</li>
+                    <li>Collaborated with senior developers to maintain and optimize existing applications</li>
+                    <li>Participated in code reviews and contributed to team documentation efforts</li>
+                    <li>Assisted in the development of RESTful APIs and microservices</li>
                   </ul>
                 </article>
               </div>
@@ -197,13 +214,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Rooshmica Ramesh</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://twitter.com/rooshmica" target="_blank"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.linkedin.com/in/rooshmicaramesh/" target="_blank"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/rooshmica" target="_blank"><i class="bi bi-github"></i></a>
-        <a href="mailto:Roosh97@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href=""><i class="bi bi-twitter-x"></i></a>
+        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href=""><i class="bi bi-instagram"></i></a>
+        <a href=""><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
