--- a/FolioOne/services-old.html
+++ b/FolioOne/services-old.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Services - Rooshmica Ramesh</title>
-  <meta name="description" content="Professional software development services: .NET Core development, AI/ML integration, Azure cloud solutions, and microservices architecture.">
-  <meta name="keywords" content=".NET Core, AI/ML, Azure, Microservices, Full Stack Developer, Rooshmica Ramesh">
+  <title>Services - FolioOne Bootstrap Template</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -53,16 +53,33 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html" class="active">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
+          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#">Dropdown 1</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="#">Deep Dropdown 1</a></li>
+                  <li><a href="#">Deep Dropdown 2</a></li>
+                  <li><a href="#">Deep Dropdown 3</a></li>
+                  <li><a href="#">Deep Dropdown 4</a></li>
+                  <li><a href="#">Deep Dropdown 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Dropdown 2</a></li>
+              <li><a href="#">Dropdown 3</a></li>
+              <li><a href="#">Dropdown 4</a></li>
+            </ul>
+          </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
       <div class="header-social-links">
-        <a href="https://twitter.com/rooshmica" target="_blank" rel="noopener" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.linkedin.com/in/rooshmicaramesh/" target="_blank" rel="noopener" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/rooshmica" target="_blank" rel="noopener" class="github"><i class="bi bi-github"></i></a>
-        <a href="mailto:roosh97@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
+        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -76,7 +93,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>Specialized technical expertise in Full-Stack Development, AI/ML Integration, and Cloud Solutions. Delivering scalable, intelligent, and high-performing software solutions that drive business transformation.</p>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -89,10 +106,10 @@
                 <i class="bi bi-code-slash"></i>
               </div>
               <div class="service-content">
-                <h3>.NET Core & Full-Stack Development</h3>
-                <p>Expert in designing and developing scalable .NET Core applications serving 5M+ users globally. Proficient in Angular, React, TypeScript, and building responsive web applications with modern UI frameworks and RESTful APIs.</p>
-                <a href="contact.html" class="service-link">
-                  <span>Get Quote</span>
+                <h3>Custom Web Development</h3>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Nulla quis lorem ut libero malesuada feugiat. Curabitur non nulla sit amet nisl tempus convallis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <a href="service-details.html" class="service-link">
+                  <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -102,13 +119,13 @@
           <div class="col-md-6" data-aos="fade-left" data-aos-delay="100">
             <div class="service-item">
               <div class="service-icon">
-                <i class="bi bi-robot"></i>
+                <i class="bi bi-phone-fill"></i>
               </div>
               <div class="service-content">
-                <h3>AI & Machine Learning Integration</h3>
-                <p>Specialized in integrating AI services into enterprise applications using RAG, LangChain, OpenAI GPT-4, and FAISS vector databases. Designed AI-driven systems improving risk evaluation efficiency by 40% for insurance companies.</p>
-                <a href="contact.html" class="service-link">
-                  <span>Get Quote</span>
+                <h3>Mobile App Solutions</h3>
+                <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vivamus magna justo, lacinia eget consectetur sed. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Donec rutrum congue leo eget malesuada.</p>
+                <a href="service-details.html" class="service-link">
+                  <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -118,13 +135,13 @@
           <div class="col-md-6" data-aos="fade-right" data-aos-delay="200">
             <div class="service-item">
               <div class="service-icon">
-                <i class="bi bi-diagram-3"></i>
+                <i class="bi bi-palette2"></i>
               </div>
               <div class="service-content">
-                <h3>Microservices Architecture</h3>
-                <p>Expert in converting legacy monolithic architecture to microservice-based architecture, enhancing system scalability and flexibility. Designed modular, secure REST APIs and microservices that interface seamlessly across platforms.</p>
-                <a href="contact.html" class="service-link">
-                  <span>Get Quote</span>
+                <h3>UI/UX Design</h3>
+                <p>Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
+                <a href="service-details.html" class="service-link">
+                  <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -134,13 +151,13 @@
           <div class="col-md-6" data-aos="fade-left" data-aos-delay="200">
             <div class="service-item">
               <div class="service-icon">
-                <i class="bi bi-database"></i>
+                <i class="bi bi-bar-chart-line"></i>
               </div>
               <div class="service-content">
-                <h3>Database Migration & Optimization</h3>
-                <p>Led migration of SQL Server databases to Azure SQL, cutting infrastructure costs by 20% and increasing data processing speeds by 25%. Expert in SQL optimization, Entity Framework, and PostgreSQL solutions.</p>
-                <a href="contact.html" class="service-link">
-                  <span>Get Quote</span>
+                <h3>Digital Marketing</h3>
+                <p>Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt. Curabitur aliquet quam id dui posuere blandit.</p>
+                <a href="service-details.html" class="service-link">
+                  <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -153,10 +170,10 @@
                 <i class="bi bi-cloud-check"></i>
               </div>
               <div class="service-content">
-                <h3>Azure Cloud Solutions</h3>
-                <p>Architected cloud-native solutions with Azure Functions, Service Bus, and Cosmos DB, enhancing scalability and fault tolerance by 40%. Expert in CI/CD pipelines, DevOps practices, and cloud migration strategies.</p>
-                <a href="contact.html" class="service-link">
-                  <span>Get Quote</span>
+                <h3>Cloud Computing</h3>
+                <p>Curabitur aliquet quam id dui posuere blandit. Sed porttitor lectus nibh. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Nulla quis lorem ut libero malesuada feugiat.</p>
+                <a href="service-details.html" class="service-link">
+                  <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -166,13 +183,13 @@
           <div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
             <div class="service-item">
               <div class="service-icon">
-                <i class="bi bi-arrow-repeat"></i>
+                <i class="bi bi-shield-lock"></i>
               </div>
               <div class="service-content">
-                <h3>Legacy System Modernization</h3>
-                <p>Specialized in migrating Oracle databases to SQL Server and modernizing legacy applications. Successfully delivered data migration projects, reducing customer effort by 25% per month while maintaining system integrity.</p>
-                <a href="contact.html" class="service-link">
-                  <span>Get Quote</span>
+                <h3>Cybersecurity Solutions</h3>
+                <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Donec sollicitudin molestie malesuada. Curabitur arcu erat, accumsan id imperdiet et. Proin eget tortor risus.</p>
+                <a href="service-details.html" class="service-link">
+                  <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -191,13 +208,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Rooshmica Ramesh</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://twitter.com/rooshmica" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.linkedin.com/in/rooshmicaramesh/" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/rooshmica" target="_blank" rel="noopener"><i class="bi bi-github"></i></a>
-        <a href="mailto:roosh97@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href=""><i class="bi bi-twitter-x"></i></a>
+        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href=""><i class="bi bi-instagram"></i></a>
+        <a href=""><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
